[Agrim]MOD:Changes made in active admin movies page to include description and changes made in update API of movie model
